# robotics-ai-final

./: README.md  data_augmentation.py  moveit_extra_function.py  status.py  todo.txt
alice_approach/: CMakeLists.txt  package.xml
alice_approach/include/: approach_objects.h
alice_approach/script/: test.py
alice_approach/src/: approach_find_table.cpp  approach_move_head.cpp  approach_move_to.cpp  approach_objects.cpp
alice_controller/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml  package.xml.save
alice_controller/include/: alice_controller.h
alice_controller/script/: .test.py.swp  forward.py  turn.py
alice_controller/src/: alice_controller.cpp  (+1 more)
alice_headcontroller/: CMakeLists.txt  package.xml
alice_headcontroller/include/: alice_headcontroller.h
alice_headcontroller/launch/: head_controller.launch  simulation_headcontroller.launch
alice_headcontroller/scripts/: filter_test.py  init_head_position.py  test.py
alice_headcontroller/src/: alice_headcontroller_node.cpp  cmd_vel.cpp  get_position.cpp  init.cpp  move_head.cpp  rostopic_service.py
alice_msgs/: CMakeLists.txt
alice_object/: CMakeLists.txt  package.xml
alice_order/: CMakeLists.txt  package.xml
alice_pointcloud/: CMakeLists.txt  package.xml
joy_controller/: CMakeLists.txt  package.xml
laser/: CMakeLists.txt  package.xml
moveit_grasp/: CMakeLists.txt  package.xml
navigation_test_planner/: .project  CMakeLists.txt  global_planner_plugin.xml  package.xml
object_recognition/: package.xml
recognition_server/: CMakeLists.txt
utils/: AllBehaviours.py  state.py
(+163 files in other folders)
